# vroom-value

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_deployment.py  run_pipeline.py
analysis/: EDA.ipynb
analysis/analyze_src/: basic_data_inspection.py  bivariate_analysis.py  multivariate_analysis.py  univariate_analysis.py
configs/: dataset.yaml  hyperparameter.yaml  model_names.yaml
notebooks/: EDA.ipynb
pipelines/: data_engineering_pipeline.py  deployment_pipeline.py  hyperparameter_tuning_pipeline.py  model_selection_pipeline.py  training_pipeline.py
src/: data_splitter.py  feature_engineering.py  ingest_data.py  model_evaluator.py  outlier_detection.py
static/: Vroom-Value Architecture.excalidraw  styles.css
steps/: data_ingestion_step.py  data_loader_step.py  data_splitter_step.py  dynamic_importer_step.py  feature_engineering_step.py  hyperparameter_tuning_step.py  model_building_step.py  model_evaluator_step.py  model_selection_step.py  outlier_detection_step.py  predictor_step.py  retrain_best_model_step.py
templates/: carprice.html  home.html  index.html  predict.html  result.html
utils/: dataset_loader.py  deploy.py  hyperparameter_loader.py  model_loader.py
