[project]
name = "vroom-value-with-pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "category-encoders>=2.8.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "zenml[server]==0.81.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
